# emb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  arduino-libs.txt  build.sh  build.sh.completion  monitor.sh
cmake/: arduino.cmake  serial_monitor.cmake
cmake/toolchains/: arm-gcc.cmake  avr-gcc.cmake  linux-host.cmake
projects/hamster/: main.c
projects/nrf_bench/: main.c
projects/raspi/: CMakeLists.txt  Cargo.toml
projects/raspi/.cargo/: config.toml
projects/raspi/src/: main.rs
projects/ssd1306/: main.c
projects/sunflower/: main.c
readme/: INSTALLATION.md  PINOUT.md
src/arm/stm32f103/: linker.ld  startup_stm32f103.c
src/common/: common.c  common.h  main.cpp
tools/: sync_arduino_libs.py
