[package]
name = "raspi"
version = "0.1.0"
edition = "2021"

[dependencies]
rppal = "0.17"
embedded-nrf24l01 = { version = "0.2", optional = true }
linux-embedded-hal = { version = "0.4", optional = true }
spidev = { version = "0.6", optional = true }
gpio-cdev = { version = "0.6", optional = true }

